--- a/meme_space/package.json
+++ b/meme_space/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "install": "^0.13.0",
     "npm": "^7.5.2",
