--- a/meme_space/package.json
+++ b/meme_space/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "install": "^0.13.0",
+    "node-sass": "^4.14.1",
     "npm": "^7.5.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
