--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+node_modules
 /node_modules
 /.pnp
 .pnp.js
@@ -22,4 +23,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
 .idea
+.eslintcache
+/client/.eslintcache
+
+# DON'T IGNORE package-lock.json
