--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/amqkv/SOEN-341#readme",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
@@ -34,6 +35,7 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
+    "@material-ui/icons": "^4.11.2",
     "nodemon": "^2.0.7"
   }
 }
