--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently --kill-others \"npm run start\" \"npm run client\""
+    "dev": "concurrently --kill-others \"nodemon run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
