--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "node server.js --ignore './client/'",
+    "server": "nodemon server.js --ignore './client/'",
     "client": "npm start --prefix client",
     "dev": "concurrently --kill-others \"npm run start\" \"npm run client\""
   },
