--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer-s3": "^2.9.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "pify": "^5.0.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
