--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pify": "^5.0.0",
