--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,37 @@ language: node_js
 node_js:
   - 14
 
+node_js:
+    -"stable"
+    
+before_install:
+    - npm i -g npm@6.4.10
+  
+cache:  
+ directories:
+    -node_modules
+ 
+ env:
+  - CXX=g++-4.8
+  
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+
+services:
+ - mongodb
+
 script:
+    -npm test
+    -npm run build
+    
+deploy:
+ provider: pages
+ skip_cleanup: true
+ github_token: $GITHUB_TOKEN
+ local_dir: build
+ on:
+   branch: main
