--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: node_js
 node_js:
   - 14
-cache:
-  directories:
-    - node_modules
+
  
-before_script : cd client ; npm install ;
+before_script : cd client 
 
 script:
   - npm run build
