--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: node_js
 node_js:
-  - 8
+  - 14
 
- 
- 
+before_install:
+    # ugly fix because npm 6.4 was failing the ci
+    - npm i -g npm@6.1.0
+    - p=$(which npm)
+    - rm $p
+    - ln -s /home/travis/.nvm/versions/node/v10.1.0/bin/npm $p || true
+    - npm -v
+    
+
 before_script : cd client 
 
 script:
