--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-jwt": "^4.0.0",
     "pify": "^5.0.0",
     "react-icons": "^4.2.0",
+    "supertest": "^6.1.3",
     "validator": "^13.5.2"
   },
   "devDependencies": {
