--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js --ignore './client/'",
     "server": "nodemon server.js --ignore './client/'",
     "client": "npm start --prefix client",
-    "dev": "concurrently --kill-others \"nodemon run server\" \"npm run client\""
+    "dev": "concurrently --kill-others \"nodemon run server\" \"npm run client\"",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "aws-sdk": "^2.843.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.3.4",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -43,6 +45,8 @@
   },
   "devDependencies": {
     "@material-ui/icons": "^4.11.2",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.7"
   }
 }
