--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "form-data": "^4.0.0",
+    "jest": "^26.6.0",
     "jwt-decode": "^3.1.2",
     "markdown-to-jsx": "^7.1.1",
     "react": "^17.0.1",
