--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
   },
   "proxy": "http://localhost:5000/",
   "eslintConfig": {
