--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js --ignore './client/'",
     "server": "nodemon server.js --ignore './client/'",
     "client": "npm start --prefix client",
-    "dev": "concurrently --kill-others \"nodemon run server\" \"npm run client\""
+    "dev": "concurrently --kill-others \"nodemon run server\" \"npm run client\"",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,8 @@
     "aws-sdk": "^2.843.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -32,6 +35,7 @@
     "form-data": "^4.0.0",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.3.2",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
