#60 Post feed testing -> HREF testing Refactored href to assign() for testing purposes Implemented the unit test for header redirects.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ client/.eslintcache
 
 # testing
 /coverage
+client/coverage
+coverage
 
 # production
 /build
@@ -29,4 +31,4 @@ yarn-debug.log*
 yarn-error.log*
 
 .idea
-.eslintcache
+/client/coverage/
