populated the mock env file for testing

--- a/.env-mock
+++ b/.env-mock
@@ -1,5 +1,5 @@
-DB_CONNECTION=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-S3_BUCKET=
-secretOrKey=
+DB_CONNECTION==mongodb+srv://username:password@cluster.database.mongodb.net/path
+AWS_ACCESS_KEY_ID=THISISATESTKEY123456789
+AWS_SECRET_ACCESS_KEY=THISISaTESTsecretKEY12345679
+S3_BUCKET=name-of-folder-name-of-bucket
+secretOrKey=thisisasecret
