--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "nodemon server.js --ignore './client/'",
     "client": "npm start --prefix client",
     "dev": "concurrently --kill-others \"nodemon run server\" \"npm run client\"",
-    "test": "mocha"
+    "test": "mocha -r dotenv/config"
   },
   "repository": {
     "type": "git",
