--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^8.3.2",
+    "mock-env": "^0.2.0",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
@@ -49,6 +50,7 @@
     "@material-ui/icons": "^4.11.2",
     "chai-http": "^4.3.0",
     "mocha": "^8.3.2",
+    "mocked-env": "^1.3.4",
     "nodemon": "^2.0.7"
   }
 }
