--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mocha": "^8.3.2",
     "mocked-env": "^1.3.4",
     "nodemon": "^2.0.7",
+    "proxyquire": "^2.1.3",
     "sinon": "^10.0.0"
   }
 }
