--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: node_js
 node_js:
-  - 14
-before_script :
-  - npm install
-  - cd client
-  - npm install
+- 14
+before_script:
+- npm install
+- cd client
+- npm install
 script:
-  - npm test
-  - cd ../
-  - npm test
+- npm test
+- cd ../
+- npm test
+before_install:
+- openssl aes-256-cbc -K $encrypted_3c84dcdc6bbe_key -iv $encrypted_3c84dcdc6bbe_iv
+  -in .env.enc -out .env -d
