--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ script:
 - npm test
 - cd ../
 - npm test
+before_install:
+- openssl aes-256-cbc -K $encrypted_3c84dcdc6bbe_key -iv $encrypted_3c84dcdc6bbe_iv
+  -in .env.enc -out .env -d
