--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "341 project",
   "main": "server.js",
   "scripts": {
+    "lint": "eslint \"./**/*.js\"",
     "client-install": "npm install --prefix client",
     "start": "node server.js --ignore './client/'",
     "server": "nodemon server.js --ignore './client/'",
@@ -49,6 +50,9 @@
   "devDependencies": {
     "@material-ui/icons": "^4.11.2",
     "chai-http": "^4.3.0",
+    "eslint": "^7.24.0",
+    "eslint-plugin-only-warn": "^1.0.2",
+    "eslint-plugin-react": "^7.23.2",
     "mocha": "^8.3.2",
     "mocked-env": "^1.3.4",
     "nodemon": "^2.0.7",
